2001-12-29  Elliot Glaysher  <glaysher@umich.edu>

	* lib/megatokyo (megatokyo): Allow different filetypes in megatokyo.

2001-12-27  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/doodie (doodie): Added new items to missing list & fixed the
	comic matching expression so that it can grab filenames with extra
	dots in them.

2001-12-26  Elliot Glaysher  <glaysher@umich.edu>

	* Netcomics/HTML/Set.pm (create_set_of_pages): Fixed small bug in new
	multiple index page feature. (Purely my fault.)

2001-12-20  Elliot Glaysher  <glaysher@umich.edu>

	* Netcomics/HTML/Set.pm: Now can create multi-paged indexes.
	* Netcomics/HTML/Page.pm: Page.pm returns the index as a list that
	can be seperated out at the Set.pm level.
	* Netcomics/HTML/Themes/Default.pm: Created pre_body and post_body
	templates.
	* Netcomics/Config.pm.in: Added the variables $comics_per_index_page
	and $webpage_indexname_tmpl.
	* netcomicsrc: Added the variables $comics_per_index_page and 
	$webpage_indexname_tmpl.
	* lib/keenspot (rpg): Added a module for RPG World.

2001-12-10  Elliot Glaysher  <glaysher@umich.edu>

	* Makefile.PL (post_constants): Updated email address. How long has
	THAT been wrong!?
	* netcomics: Optimized the order in which things happen so RLI files
	aren't reloaded if all the user wants is a list. Speeds things up
	immensely if user has +3000 RLI files.
	* Netcomics/Factory.pm (load_RLI_files): Split off loading RLI files 
	into a separate function.

2001-12-10  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/keenspot: Updated GPF based on changes submitted by
	Sven Hartge.
	* Netcomics/Factory.pm: 463946: fixed code that had uninitialized
	value errors. 

2001-12-02  Elliot Glaysher  <glaysher@umich.edu>

	* lib/norm (nm): Fixed The Norm's module. Closes:#463945.
	* Netcomics/Factory.pm (setup): Fixed serious bug which was causing
	netcomics to ignore the "day's behind" in most situations where 
	netcomics *should* be offsetting the date by the day's behind.
